--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 
 <head>
-    <title>长泰芦柑</title>
+    <title>黄色网站大全,30个真正的黄色网站</title>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
-    <meta name="Keywords" content="长泰芦柑">
-    <meta name="Description" content="长泰芦柑">
+    <meta name="Keywords" content="黄色网址,谁有黄色网址,1024,红灯区">
+    <meta name="Description" content="30个真正的黄色网站">
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,Chrome=1" />
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, minimum-scale=1.0" />
@@ -16,35 +16,37 @@
 <body>
     <div class="main">
         <div class="item">
-            <img src="./images/4.jpg">
+            <h2>30个真正的黄色网站，都在这里了！</h2>
             <p class="p">
-                长泰县，福建省漳州市辖县,介于北纬24°33′—24°54′，东经117°36′—117°57′之间。独特的地理位置它 是中国优质水果———中国芦柑之乡，素有“闽南宝地”之称
+                一个好的黄色网站的重点并不是够不够黄，也不一定要黄色电影、黄色视频、黄色图片和黄色小说一应俱全，而是要黄的有质感有层次，欣赏起来要赏心悦目。在浩瀚的互联网宇宙中，有无数的黄色网站。有的你可能已经深入接触，有的你可能从未体验。
             </p>
+            <img src="./images/4.jpg">
         </div>
         <div class="item">
+            <h3>paralotna</h3>
             <img src="./images/3.jpg">
-            <p class="p">长泰芦柑又名椪柑，为闽南一带传统产品，以产自中国芒柑之乡——福建漳州市长泰县而得名</p>
         </div>
         <div class="item">
+            <h3>sebdesign.eu</h3>
             <img src="./images/1.jpg">
-            <p class="p">多年来，长泰芦柑以其色、香、味三绝而蜚声海内外，每年农历的十一月至十二月是芦柑的采摘季节。春节前后，大量鲜果投放市场。被选送到首都国宾馆，并远销东南亚、港澳市场。</p>
         </div>
         <div class="item">
+            <h3>Trout Creative Thinking</h3>
             <img src="./images/a03.jpg">
-            <p class="p">性味归经：性凉，味甘酸；入脾、胃、膀胱经。有生津止渴、和胃利尿功效； </p>
         </div>
         <div class="item">
+            <h3>strangenative.com</h3>
             <img src="./images/lu6.jpg">
-            <p class="p">由于柑的果汁能清胃热，故凡膈烦热、口中干渴或酒毒烦热、食少气逆、小便不利者，可为滋养食疗果品。</p>
         </div>
         <div class="item">
+            <h3>garethdickey.com</h3>
             <img src="./images/a01.jpg">
         </div>
         <div class="item">
-            <img class="weixin" src="./images/weixin.jpg">
-            <span class="info">
-				<p>新鲜的长泰芦柑大量到货，欢迎来砸单，订购热线：<a href="tel:18030277089">18030277089</a>（对公可开发票）</p>
-			</span>
+            <h3><a href="http://wwvpn.com">专业推广，帮你建站==> wwvpn.com</a></h3>
+            <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=1500478451&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:1500478451:41" alt="点击这里给我发消息" title="点击这里给我发消息" /></a>
+            <h3>#####<a href="mailto:1500478451@qq.com">1500478451@qq.com</a>#####</h3>
+            <img src="./images/a01.jpg">
         </div>
     </div>
 </body>
