--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <img src="./images/a01.jpg">
         </div>
         <div class="item">
-            <h3><a href="http://wwvpn.com">专业推广，帮你建站==> wwvpn.com</a></h3>
+            <h3><a href="http://wwvpn.com">免费的专业推广，帮你建站==> wwvpn.com</a></h3>
             <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=1500478451&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:1500478451:41" alt="点击这里给我发消息" title="点击这里给我发消息" /></a>
             <h3>#####<a href="mailto:1500478451@qq.com">1500478451@qq.com</a>#####</h3>
             <img src="./images/a01.jpg">
